Image error solved

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- <center> -Center tag- -To allign all data in centre position- -->
         <table cellspacing="10">
             <tr>
-                <td><img src="D:\1672844811626-modified.png"
+                <td><img src="1672844811626-modified.png"
                     width="200" height="200" alt=""> <!---Image tag--->
                 </td>
                 <td><h1>Ommprakash Sardarsingh</h1> <!---Headings tag--->
