--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 <body>
     <ul>
         <li>Gmail : <a href="mailto:ommprakash2563@gmail.com" target="_blank">ommprakash2563@gmail.com</a></li>
-        <li>Instagram : <a href="https://www.instagram.com/hypnotic_dude/" target="_blank">https://www.instagram.com/hypnotic_dude/</a></li>
+        <li>Instagram : <a href="https://www.linkedin.com/in/ommprakashsardarsingh/" target="_blank">https://www.linkedin.com/in/ommprakashsardarsingh/</a></li>
     </ul>
     <form action="mailto:ommprakash2563@gmail.com" method="post" enctype="text/plain">
         <label >Your name : </label>
